# wcap-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
examples/: test_capture.rs
src/: ffi.rs  lib.rs
wcap/include/: stb_image_write.h  wcap.hpp  wcap_c.h
wcap/src/: wcap.cpp  wcap_c.cpp
